# kalshi-trading-bot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  todos.md
.claude/commands/: add-strategy.md  backtest.md  bot-logs.md  bot-status.md  calibration.md  pr.md  restart-bot.md  review-performance.md  robustness-check.md  start-live.md  start-paper.md  stop-bot.md  test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
backtest/: __main__.py  analysis.py  backtester.py  candle_features.py  data_collector.py  fetch_data.py  run.py
config/: settings.live.yaml  settings.yaml
delta-docs/: feb20-to-feb23-revert-plan.md
results/: btc_improved_BTC.json  current_BTC.json  current_ETH.json  eth_improved_ETH.json  robustness_report.md
scripts/: analyze_logs.py  backfill_strategy_tags.py  calibration_report.py  robustness_check.py  verify_trades.py
src/: bot.py  config.py
src/dashboard/: page.py  server.py
src/data/: binance_feed.py  binance_futures_feed.py  chainlink_feed.py  coinglass_client.py  data_hub.py  database.py  kalshi_auth.py  (+5 more)
strategy/: certainty-scalp-flow.md  directional-trade-flow.md  fomo-flow.md  market-making-flow.md  settlement-ride-flow.md  trend-continuation-flow.md
tests/: conftest.py  test_audit_live_readiness.py  test_auth.py  test_chainlink_feed.py  test_dashboard.py  test_execution.py  test_fair_value.py  test_features.py  test_integration_e2e.py  test_integration_new_features.py  test_models.py  test_monte_carlo.py  test_predict_improvements.py  test_risk.py  test_strategy.py  test_time_profile.py
(+19 files in other folders)
