[project]
name = "kalshi-btc-bot"
version = "0.1.0"
description = "Automated trading bot for Kalshi Bitcoin 15-minute binary options"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "cryptography>=42.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "aiosqlite>=0.19",
    "structlog>=23.2",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.1", "scikit-learn>=1.3", "scipy>=1.11"]
backtest = ["matplotlib>=3.8", "seaborn>=0.13"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1",
]

[project.scripts]
kalshi-bot = "src.bot:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "backtest*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
